<resources>
    <string name="app_name"> </string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Sign Up</string>
    <string name="click_to_login">Click to login</string>
    <string name="register_now">Register Now</string>
    <string name="log_out">Log Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="click_to_log_in">Click to Log in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="user_full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="forget_password1"> FORGET PASSWORD</string>
    <string name="restart_password">Restart Password</string>
    <string name="back">Back</string>
    <string name="view_items">View Items</string>
    <string name="search">search</string>
    <string name="choose_a_car">Choose a car</string>
    <string name="contact_us">contact us</string>
    <string name="any_suggest">any suggest</string>
    <string name="contact_description">"If you have any questions, need assistance, or would like more information about our products and services, please don't hesitate to reach out to us. You can contact us on the email or a phone number</string>

    <string-array name="category_array">
        <item>All</item>
        <item>Coupe</item>
        <item>SUV</item>
        <item>Convertible</item>
        <item>Sedan</item>
        <item>Sports</item>
        <item>Hatchback</item>

    </string-array>

    <string-array name="gear_type_array">
        <item>All</item>
        <item>Manual</item>
        <item>Automatic</item>

    </string-array>

</resources>