<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ForgetPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password1"
        android:textSize="40dp"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Provide your account email which you want to reset"
        android:gravity="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:id="@+id/tv_idLayout"
       android:hint="Email"
       android:textColorHint="@color/black"
       app:boxStrokeColor="@color/black">

       <com.google.android.material.textfield.TextInputEditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/edt_forgetPassword"
           android:textColor="@color/black"
           android:inputType="textEmailAddress"
           android:singleLine="true"/>
   </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/forgetPasswordProgressBar"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_restartPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restart_password"/>

        <Button
            android:id="@+id/btn_backOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/back"/>

    </FrameLayout>

</LinearLayout>