<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_arrow_back_24" />

    <!-- Contact illustration -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="131dp"
        android:layout_height="97dp"
        android:src="@drawable/contactwithus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <!-- Title -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Description -->
    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_description"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <!-- Email icon -->
    <ImageView
        android:id="@+id/emailIconImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/baseline_email_24"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"/>

    <!-- Email EditText -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/emailIconImageView"
        app:layout_constraintStart_toEndOf="@+id/emailIconImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:enabled="false"/>

    <!-- Phone icon -->
    <ImageView
        android:id="@+id/phoneIconImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/baseline_call_24"
        app:layout_constraintTop_toBottomOf="@+id/emailIconImageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"/>

    <!-- Phone EditText -->
    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:inputType="phone"
        app:layout_constraintTop_toTopOf="@+id/phoneIconImageView"
        app:layout_constraintStart_toEndOf="@+id/phoneIconImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:enabled="false"/>

    <!-- Inquiry EditText -->
    <EditText
        android:id="@+id/inquiryEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/any_suggest"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>

    <!-- Submit button -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintTop_toBottomOf="@+id/inquiryEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
